# ristretto255

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: hax.yml  rust.yml
proofs/fstar/extraction/: Makefile  Ristretto255.Bundle.fst  Ristretto255.Bundle_decompress.fst  Ristretto255.Constants.fst  Ristretto255.Field.fst  Ristretto255.fst
proofs/fstar/models/: Core_models.Iter.Bundle.fst  Core_models.Ops.Arith.fsti  Core_models.Ops.Bit.fsti  Libcrux_hacl_rs.Bignum25519_51_.fsti  Subtle.fst  Subtle.fsti
ristretto255/: Cargo.toml  hax.py
ristretto255-ka/: Cargo.toml
ristretto255-ka/src/: lib.rs
ristretto255/benches/: compress.rs  ristretto.rs
ristretto255/proofs/fstar/: README.md
ristretto255/proofs/fstar/extraction/: Ristretto255.Backend.fst  Ristretto255.Bundle.fst  Ristretto255.Constants.fst  Ristretto255.Decompress.fst  Ristretto255.Field.fst  Ristretto255.Scalar.fst  Ristretto255.Traits.fst  Ristretto255.fst
ristretto255/proofs/fstar/models/: Core_models.Iter.Traits.Iterator.fst  Libcrux_hacl_rs.Fstar.Uint128.fsti  Subtle.fsti
ristretto255/src/: backend.rs  constants.rs  field.rs  lib.rs  scalar.rs
src/: constants.rs  field.rs  lib.rs  traits.rs
