[package]
name = "ristretto255"
version = "0.1.0"
edition = "2021"
authors = ["redshiftzero <jen@relicveil.com>"]
description = "Verified implementation of ristretto255 prime-order group"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redshiftzero/ristretto255"
readme = "README.md"

[dependencies]
# libcrux-curve25519 = "0.0.6"
hax-lib = { git = "https://github.com/hacspec/hax", version = "0.3.6" }
subtle = "1.0.0"
# This is needed only to pull in a few traits from the upstream library
# temp: removed for fstar typechecking
# curve25519-dalek = "4.1.3"
libcrux-hacl-rs = "0.0.4"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
